Implement user activation and block functionality